quick z-index fix

--- a/frontend/src/models/models.css
+++ b/frontend/src/models/models.css
@@ -44,6 +44,7 @@
   position: sticky;
   top: 0px;
   background-color: white;
+  z-index: 1;
 }
 
 .models .documents table th:after {
